--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.54.0
+streamlit==1.32.0
 joblib==1.4.0
 numpy==1.24.3
-pandas==2.3.3
+pandas==2.2.2
 scikit-learn==1.3.2
 matplotlib==3.7.2
+distutils==0.1
